# hermem

./: .gitignore  .last_index_run  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Hermem V5后续版本规划  Hermem-V5-SPEC.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  README_zh.md  SPEC.md  TROUBLESHOOTING.md  VERSION_HISTORY.md  batch_backfill.py  hermem_v45_eval.md  install.sh  pyproject.toml  requirements.txt
.githooks/: pre-commit
archive/: Hermem V5后续版本规划_2026-05.md  README.md
bridge_pr/: HOW_TO_OPEN_PR.md  PR_DESCRIPTION.md  hermem_v6_bridge_sprint_2_3_4.patch
impl/: embedding.py
legacy/phase1_2/: README.md  __init__.py  batch_backfill.py  commands.py  database.py  embedding.py  migrate.py  retrieval.py
phase1/: REVIEW.md  SPEC.md  TODO.md
phase2/: REVIEW.md  SPEC.md  TODO.md  TODO.v1.minimax.md
phase3/: SPEC.md  TODO.md  cron_daily.py  openclaw_import.py  test_intent_coverage.py  v4_2_migrate.py
phase3/eval/: baseline_report.json  eval_compare.py  eval_qwen35_4b.py  ground_truth.jsonl  ground_truth_candidates.jsonl  ground_truth_label_data.jsonl  ground_truth_labeler.html  per_turn_judgment_eval.py  test_l1_extraction.py
phase3/impl/: __init__.py  async_annotation.py  batch_extract.py  concept_weight.py  config.py  database.py  db_init.py  disposition_updater.py  embedding.py  explain.py  explain_templates.py  intent_classifier.py  l0_store.py  l1_extract.py  l1_search.py  l2_aggregate.py  l3_staging.py  migrate_v6_sprint05.py  predictor.py  recall_outcome_tracker.py  reflect.py  reranker.py  retrieval.py  trigger.py  (+9 more)
templates/: __init__.py
(+79 files in other folders)
